Listings page aligns correctly

--- a/public/css/profile_styles.css
+++ b/public/css/profile_styles.css
@@ -5,17 +5,29 @@
 
 .listings {
   grid-column: 2;
-  padding: 20px 10px 20px 30px;
+  padding: 20px 10px 20px 10px;
 }
 
 .user {
   grid-column: 3;
-  padding: 20px 10px 20px 10px;
+  padding: 20px 10px 20px 30px;
+}
+
+.user-pic {
+  width: 300px;
+}
+
+.user-text {
+  padding: 20px 10px 20px 30px;
+}
+
+.listing-title {
+  text-transform: capitalize;
 }
 
 .listing-pic {
   width = 100%;
-  max-width: 100px;
+  max-width: 230px;
   padding: 20px 0 20px 0;
 }
 
@@ -34,6 +46,16 @@
   padding-bottom: 10px;
 }
 
+.date {
+  color: #999;
+  padding-bottom: 10px;
+  font-style: italic;
+}
+
+#user-details {
+  width: 100%;
+}
+
 #contact-button {
   background-color: #39B54A;
   font-size: 20px;
@@ -45,6 +67,9 @@
   width: 100%;
   transition: all 0.5s;
   cursor: pointer;
+  display: block;
+  max-width: 230px;
+  margin: auto;
 }
 
 #contact-button:focus {
